[gd_scene load_steps=26 format=2]

[ext_resource path="res://gui/screens/settings/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/screens/settings/scripts/Audio Settings.gd" type="Script" id=2]
[ext_resource path="res://gui/screens/settings/scripts/MuteBtn.gd" type="Script" id=3]
[ext_resource path="res://music/xDeviruchi - Prepare for Battle! .wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 5
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 3
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 3
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 3
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 24
outline_size = 3
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.647059, 0.843137, 0.909804, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.854902, 0.305882, 0.415686, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.415686, 0.780392, 0.490196, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.415686, 0.780392, 0.490196, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=14]
size = 24
outline_size = 3
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.647059, 0.843137, 0.909804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.698039, 0.329412, 0.329412, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.647059, 0.843137, 0.909804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.329412, 0.698039, 0.443137, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=9]
size = 32
outline_size = 5
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.647059, 0.843137, 0.909804, 1 )
border_width_bottom = 10
border_color = Color( 0.341176, 0.423529, 0.737255, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=11]
content_margin_top = 5.0
bg_color = Color( 0.647059, 0.843137, 0.909804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 10.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.341176, 0.423529, 0.737255, 1 )
border_width_bottom = 10
border_color = Color( 0.647059, 0.843137, 0.909804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 5
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.647059, 0.843137, 0.909804, 1 )
border_width_bottom = 10
border_color = Color( 0.341176, 0.423529, 0.737255, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.647059, 0.843137, 0.909804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 10.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.341176, 0.423529, 0.737255, 1 )
border_width_bottom = 10
border_color = Color( 0.647059, 0.843137, 0.909804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[node name="Audio Settings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -590.0
margin_top = -310.0
margin_right = 590.0
margin_bottom = 310.0
custom_constants/separation = 30

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1180.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_colors/font_color = Color( 0.647059, 0.843137, 0.909804, 1 )
custom_fonts/font = SubResource( 1 )
text = "VOLUME MENU"
align = 1
valign = 1

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 1180.0
margin_bottom = 110.0

[node name="Name" type="Label" parent="VBoxContainer/Header"]
margin_left = 146.0
margin_right = 244.0
margin_bottom = 30.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "NAME"

[node name="Volume" type="Label" parent="VBoxContainer/Header"]
margin_left = 519.0
margin_right = 659.0
margin_bottom = 30.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 3 )
text = "VOLUME"

[node name="Mute" type="Label" parent="VBoxContainer/Header"]
margin_left = 789.0
margin_right = 1180.0
margin_bottom = 30.0
size_flags_horizontal = 11
custom_fonts/font = SubResource( 4 )
text = "MUTE / UNMUTE"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 1180.0
margin_bottom = 548.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1180.0
margin_bottom = 408.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100

[node name="row_1" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1180.0
margin_bottom = 50.0

[node name="General" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/row_1"]
margin_left = 133.0
margin_top = 13.0
margin_right = 256.0
margin_bottom = 37.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.647059, 0.843137, 0.909804, 1 )
custom_fonts/font = SubResource( 13 )
text = "GENERAL"

[node name="HSlider" type="HSlider" parent="VBoxContainer/ScrollContainer/VBoxContainer/row_1"]
margin_left = 489.0
margin_top = 17.0
margin_right = 689.0
margin_bottom = 33.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 4
custom_styles/slider = SubResource( 19 )
custom_styles/grabber_area_highlight = SubResource( 21 )
custom_styles/grabber_area = SubResource( 20 )
min_value = -30.0
max_value = 0.0

[node name="MuteBtn" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/row_1"]
margin_left = 909.0
margin_right = 1059.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 6
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.647059, 0.843137, 0.909804, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 15 )
toggle_mode = true
text = "MUTE"
script = ExtResource( 3 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_left = 535.0
margin_top = 578.0
margin_right = 645.0
margin_bottom = 620.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_focus = Color( 0.647059, 0.843137, 0.909804, 1 )
custom_colors/font_color = Color( 0.647059, 0.843137, 0.909804, 1 )
custom_colors/font_color_hover = Color( 0.341176, 0.423529, 0.737255, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "CLOSE"

[node name="Controls" type="Button" parent="."]
margin_left = 1074.0
margin_top = 41.0
margin_right = 1222.0
margin_bottom = 91.0
size_flags_horizontal = 0
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
text = "Controls"

[node name="test_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="drag_ended" from="VBoxContainer/ScrollContainer/VBoxContainer/row_1/HSlider" to="." method="_on_HSlider_drag_ended"]
[connection signal="drag_started" from="VBoxContainer/ScrollContainer/VBoxContainer/row_1/HSlider" to="." method="_on_HSlider_drag_started"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/row_1/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/row_1/MuteBtn" to="VBoxContainer/ScrollContainer/VBoxContainer/row_1/MuteBtn" method="_on_MuteBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]
